package com.paytool.model;

public enum GroupStatus {
    PENDING,
    ACTIVE,
    COMPLETED,
    CANCELLED
} 