package com.paytool.model;

public enum MemberStatus {
    PENDING,
    AGREED,
    DISAGREED
} 