package com.paytool.model;

public enum PaymentCardStatus {
    PENDING,
    ACTIVE,
    USED,
    EXPIRED
} 