package com.paytool.model;

public enum TransactionStatus {
    PENDING,
    COMPLETED,
    FAILED,
    CANCELLED
} 